# MAGI-oss_python

./: .gitignore  LICENSE  README.md  nodes.yaml
batch_script-for_test/: README.md
batch_script-for_test/STAGE01/: 1-build_plan.py  2-preflight_check.py  3-run_plan.py  4-summarize_plan.py  README.md  _lib.py  plan.stage01.20260306_jst_prod30.json  plan.stage01.json  plan.stage01.runpod.json
batch_script-for_test/STAGE02/: 1-statusboard.py  2-list_failed_runs.py  3-rerun_failed.py  README.md
batch_script-for_test/STAGE03/: 1-integrate_results.py  2-aggregate_plan.py  README.md
batch_script-for_test/STAGE04/: 1-run_pair_analyzer.py  2-publish_summary_links.py  README.md
batch_script-for_test/STAGE05/: 1-generate_multi_plans.py  2-preflight_all.py  3-run_smoke_all.py  4-run_full_all.py  5-integrate_and_summarize_all.py  README.md
compute-runner/: pyproject.toml
compute-runner/src/rocm_compute/: cli.py  env_collect.py  inference.py
compute-runner/tests/: test_cli.py
deploy/: research-mcp.service  research-mcp.user.service  xrdp-xsessionrc.sh
docs/: design-notes.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: db.ts  index.ts
plan/jp_en_100_temp_sweep/: RUNBOOK.md  generate_plans.py  jp_en100_eve_t0p0_e30.json  jp_en100_eve_t0p1_e30.json  jp_en100_eve_t0p2_e30.json  jp_en100_eve_t0p7_e30.json  jp_en100_zorya_t0p0_e30.json  jp_en100_zorya_t0p1_e30.json  jp_en100_zorya_t0p2_e30.json  jp_en100_zorya_t0p7_e30.json  (+5 more)
runner/: pyproject.toml
runner/src/rocm_runner/: cli.py
runner/tests/: test_spec_v1_1_gen_params.py
(+2 files in other folders)
