[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-mcp-runner"
version = "0.1.0"
description = "Control-plane integration runner for ROCm-MCP"
requires-python = ">=3.10"

[project.scripts]
runner = "rocm_runner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]